Replace `since` with cursor based `after` param
Closes #31
